chore: remove formatting from base.scss

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -288,11 +288,9 @@ a:focus {
 .dc__white-space-normal {
     white-space: normal;
 }
-
 .dc__white-space-pre {
     white-space: pre;
 }
-
 .dc__white-space-pre-wrap {
     white-space: pre-wrap;
 }
@@ -763,7 +761,6 @@ button.anchor {
 }
 
 .app-summary__status-name {
-
     &.f-healthy,
     &.f-synced,
     &.f-sync.ok,
@@ -1046,7 +1043,6 @@ button.anchor {
 }
 
 .override-button.cta {
-
     &.ghosted,
     &.delete {
         height: 32px;
@@ -1098,7 +1094,6 @@ button.anchor {
     display: grid;
     grid-template-columns: 24px 1fr 200px;
     grid-column-gap: 10px;
-
     .tag {
         border: 1px solid var(--N200);
         height: 20px;
@@ -1364,12 +1359,12 @@ button.anchor {
         overflow: hidden;
         border-radius: 4px;
 
-        input+.radio__item-label {
+        input + .radio__item-label {
             border-radius: 0;
             border: 1px solid var(--N200);
         }
 
-        input[type='checkbox']:checked+.radio__item-label {
+        input[type='checkbox']:checked + .radio__item-label {
             border-radius: 0;
             background-color: var(--N100);
             color: var(--N900);
@@ -1398,19 +1393,19 @@ button.anchor {
                 border-right: unset;
             }
 
-            &:first-child input+.radio__item-label {
+            &:first-child input + .radio__item-label {
                 border-top-left-radius: 4px !important;
                 border-bottom-left-radius: 4px !important;
             }
 
-            &:last-child input+.radio__item-label {
+            &:last-child input + .radio__item-label {
                 border-top-right-radius: 4px !important;
                 border-bottom-right-radius: 4px !important;
                 border: 1px solid var(--N200);
             }
         }
 
-        input[type='checkbox']:checked+.radio__item-label {
+        input[type='checkbox']:checked + .radio__item-label {
             border-radius: 0;
             background-color: var(--N100);
             color: var(--N900);
@@ -1429,12 +1424,12 @@ button.anchor {
         overflow: hidden;
         border-radius: 4px;
 
-        input+.radio__item-label {
+        input + .radio__item-label {
             border-radius: 0;
             border: 1px solid var(--N200);
         }
 
-        input[type='checkbox']:checked+.radio__item-label {
+        input[type='checkbox']:checked + .radio__item-label {
             border-radius: 0;
             color: var(--N900);
             background-color: var(--N0);
@@ -1464,12 +1459,12 @@ button.anchor {
                 border-right: unset;
             }
 
-            &:first-child input+.radio__item-label {
+            &:first-child input + .radio__item-label {
                 border-top-left-radius: 4px !important;
                 border-bottom-left-radius: 4px !important;
             }
 
-            &:last-child input+.radio__item-label {
+            &:last-child input + .radio__item-label {
                 border-top-right-radius: 4px !important;
                 border-bottom-right-radius: 4px !important;
                 border: 1px solid var(--N200);
@@ -1480,7 +1475,7 @@ button.anchor {
 
 .gui-yaml-switch {
     &.radio-group {
-        input[type='checkbox']:checked+.radio__item-label {
+        input[type='checkbox']:checked + .radio__item-label {
             color: var(--N900);
 
             svg path {
@@ -1509,7 +1504,7 @@ button.anchor {
         &.radio-group {
             height: 30px;
 
-            input+.radio__item-label {
+            input + .radio__item-label {
                 padding-inline: 8px;
             }
         }
@@ -1518,7 +1513,7 @@ button.anchor {
 
 .manual-approvals-switch {
     &.radio-group {
-        input[type='checkbox']:checked+.radio__item-label {
+        input[type='checkbox']:checked + .radio__item-label {
             color: var(--N900);
 
             svg path {
@@ -1526,7 +1521,7 @@ button.anchor {
             }
         }
 
-        input+.radio__item-label {
+        input + .radio__item-label {
             padding: 4px 8px;
         }
 
@@ -1537,12 +1532,12 @@ button.anchor {
                 fill: var(--N500);
             }
 
-            &:first-child input+.radio__item-label {
+            &:first-child input + .radio__item-label {
                 border-top-left-radius: 4px !important;
                 border-bottom-left-radius: 4px !important;
             }
 
-            &:last-child input+.radio__item-label {
+            &:last-child input + .radio__item-label {
                 border-top-right-radius: 4px !important;
                 border-bottom-right-radius: 4px !important;
             }
@@ -1766,7 +1761,6 @@ button.anchor {
 
     &.dc__visible-hover--parent:hover {
         .dc__visible-hover {
-
             // If we give this class then the element will be visible on hover
             &--child {
                 display: inherit;
@@ -1854,7 +1848,7 @@ button.anchor {
     vertical-align: bottom;
 }
 
-.dc__tertiary-tab__radio input:checked~.dc__tertiary-tab {
+.dc__tertiary-tab__radio input:checked ~ .dc__tertiary-tab {
     border: solid 1px var(--B500);
     background-color: var(--B100);
 }
@@ -2036,11 +2030,9 @@ button.anchor {
 
 .dc__link {
     color: var(--B500);
-
     &.dc__link_over {
         color: var(--N600);
     }
-
     &:hover {
         color: var(--B500);
     }
@@ -2702,7 +2694,7 @@ textarea,
     }
 }
 
-.basic-multi-select>.select__control--is-disabled {
+.basic-multi-select > .select__control--is-disabled {
     background-color: var(--N100) !important;
 }
 
@@ -2835,7 +2827,6 @@ textarea,
 }
 
 .icon-stroke-b5 {
-
     path,
     rect {
         stroke: var(--B500);
@@ -2886,7 +2877,6 @@ textarea,
 .dc__word-wrap-anywhere {
     word-wrap: anywhere;
 }
-
 .dc__ff-monospace {
     font-family: monospace;
 }
@@ -3960,11 +3950,9 @@ textarea,
 .dc__column-gap-24 {
     column-gap: 24px;
 }
-
 .dc__column-gap-32 {
     column-gap: 32px;
 }
-
 .dc__gap-2 {
     gap: 2px;
 }
@@ -4283,7 +4271,6 @@ textarea::placeholder {
     user-select: none;
     border: solid 1px transparent;
 }
-
 .dc__zi-0 {
     z-index: 0;
 }
@@ -4427,7 +4414,6 @@ textarea::placeholder {
     .action-icon {
         display: none;
     }
-
     &.icon-hover {
         &:hover {
             .show-icon {
@@ -4470,8 +4456,7 @@ textarea::placeholder {
 }
 
 .dc__grabbable {
-    cursor: move;
-    /* fallback if grab cursor is unsupported */
+    cursor: move; /* fallback if grab cursor is unsupported */
     cursor: grab;
     cursor: -moz-grab;
     cursor: -webkit-grab;
