feat: add util classes for width and max height

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3180,6 +3180,10 @@ textarea,
     width: 436px;
 }
 
+.w-450 {
+    width: 450px;
+}
+
 .w-476 {
     width: 476px;
 }
@@ -3608,6 +3612,10 @@ textarea,
 
 .mxh-504 {
     max-height: 504px;
+}
+
+.mxh-600 {
+    max-height: 600px;
 }
 
 .mxh-390-imp {
