chore: add mw-600

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2984,6 +2984,10 @@ textarea,
     min-width: 400px;
 }
 
+.mw-600 {
+    min-width: 600px;
+}
+
 .w-auto-imp {
     width: auto !important;
 }
@@ -3719,6 +3723,10 @@ textarea,
 
 .pt-40 {
     padding-top: 40px;
+}
+
+.pt-70 {
+    padding-top: 70px;
 }
 
 .pl-200 {
