feat: move scoped variable tabs to URL

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3929,6 +3929,10 @@ textarea,
     column-gap: 16px;
 }
 
+.dc__column-gap-20 {
+    column-gap: 20px;
+}
+
 .dc__column-gap-24 {
     column-gap: 24px;
 }
