feat: add message in app status card for flux apps

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2394,6 +2394,10 @@ button.anchor {
     max-width: 160px;
 }
 
+.dc__mxw-175 {
+    max-width: 175px;
+}
+
 .dc__mxw-178 {
     max-width: 178px;
 }
