chore: add dc__mxw-1200

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2430,6 +2430,10 @@ button.anchor {
     max-width: 1068px;
 }
 
+.dc__mxw-1200 {
+    max-width: 1200px;
+}
+
 .dc__mxw-1400 {
     max-width: 1400px;
 }
