feat: remove check of error code 406 on scoped variable error

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3751,6 +3751,10 @@ textarea,
     padding-bottom: 6px !important;
 }
 
+.pb-12-imp {
+    padding-bottom: 12px !important;
+}
+
 .pt-6-imp {
     padding-top: 6px !important;
 }
