--- a/src/Pages/Applications/DevtronApps/Details/AppConfigurations/appConfig.scss
+++ b/src/Pages/Applications/DevtronApps/Details/AppConfigurations/appConfig.scss
@@ -29,62 +29,71 @@
         display: grid;
         grid-template-columns: 1fr;
         overflow: hidden;
+
+        &.app-compose-env-configurations__nav {
+            padding: 0;
+            grid-template-rows: 44px 1fr;
+        }
+
         &.app-compose-with-no-gitops-config__nav {
-            grid-template-rows: 110px repeat(6, 32px) 54px 1fr auto;
+            grid-template-rows: 110px repeat(4, 32px) 54px 1fr auto;
+
             &.hide-app-config-help {
-                grid-template-rows: repeat(6, 32px) 54px 1fr auto;
+                grid-template-rows: repeat(4, 32px) 54px 1fr auto;
 
                 &.hide-external-links {
-                    grid-template-rows: repeat(6, 32px) 1fr auto;
+                    grid-template-rows: repeat(4, 32px) 1fr auto;
                 }
             }
 
             &.job-compose__side-nav {
-                grid-template-rows: 110px repeat(4, 32px) 1fr;
+                grid-template-rows: 110px repeat(3, 32px) 1fr;
 
                 &.hide-app-config-help {
-                    grid-template-rows: repeat(4, 32px) 1fr;
+                    grid-template-rows: repeat(3, 32px) 1fr;
                 }
             }
 
             &.config-protection__side-nav {
-                grid-template-rows: 110px repeat(6, 32px) 54px 32px 1fr auto;
+                grid-template-rows: 110px repeat(4, 32px) 54px 32px 1fr auto;
 
                 &.hide-external-links {
-                    grid-template-rows: 110px repeat(6, 32px) 54px 1fr auto;
+                    grid-template-rows: 110px repeat(4, 32px) 54px 1fr auto;
                 }
 
                 &.hide-app-config-help {
-                    grid-template-rows: repeat(6, 32px) 54px 32px 1fr auto;
+                    grid-template-rows: repeat(4, 32px) 54px 32px 1fr auto;
 
                     &.hide-external-links {
-                        grid-template-rows: repeat(6, 32px) 54px 1fr auto;
+                        grid-template-rows: repeat(4, 32px) 54px 1fr auto;
                     }
                 }
             }
         }
+
         &.app-compose-with-gitops-config__nav {
-            grid-template-rows: 110px repeat(7, 32px) 54px 1fr auto;
+            grid-template-rows: 110px repeat(5, 32px) 54px 1fr auto;
+
             &.hide-app-config-help {
-                grid-template-rows: repeat(7, 32px) 54px 1fr auto;
+                grid-template-rows: repeat(5, 32px) 54px 1fr auto;
 
                 &.hide-external-links {
-                    grid-template-rows: repeat(7, 32px) 1fr auto;
+                    grid-template-rows: repeat(5, 32px) 1fr auto;
                 }
             }
 
             &.config-protection__side-nav {
-                grid-template-rows: 110px repeat(7, 32px) 54px 32px 1fr auto;
+                grid-template-rows: 110px repeat(5, 32px) 54px 32px 1fr auto;
 
                 &.hide-external-links {
-                    grid-template-rows: 110px repeat(7, 32px) 54px 1fr auto;
+                    grid-template-rows: 110px repeat(5, 32px) 54px 1fr auto;
                 }
 
                 &.hide-app-config-help {
-                    grid-template-rows: repeat(7, 32px) 54px 32px 1fr auto;
+                    grid-template-rows: repeat(5, 32px) 54px 32px 1fr auto;
 
                     &.hide-external-links {
-                        grid-template-rows: repeat(7, 32px) 54px 1fr auto;
+                        grid-template-rows: repeat(5, 32px) 54px 1fr auto;
                     }
                 }
             }
@@ -142,6 +151,10 @@
         justify-content: space-between;
         align-items: center;
         text-decoration: none;
+
+        &--job {
+            max-width: 188px;
+        }
 
         &.routes-container-header {
             font-size: 12px;
