--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4742,3 +4742,7 @@ textarea::placeholder {
 .dc__modal-gradient {
     background: linear-gradient(14deg, var(--N50) 48.93%, #D4E6F7 80.3%);
 }
+
+.bw-1_5 {
+    border-width: 1.5px;
+}
