chore: cm-secret css change

--- a/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
+++ b/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
@@ -37,7 +37,7 @@
     grid-template-rows: auto;
 }
 
-.cm-secret-main-container {
+.cm-secret-container {
     & .main-content {
         height: calc(100vh - 142px);
         overflow-y: auto;
@@ -50,7 +50,6 @@
         left: 56px;
         top: 77px;
         right: 0;
-        // width: calc(100% - 56px);
         height: calc(100% - 77px);
         animation: comments-view-opening;
         animation-duration: 200ms;
