--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -368,6 +368,10 @@ a:focus {
     top: 26px;
 }
 
+.dc__top-40 {
+    top: 40px;
+}
+
 .dc__top-46 {
     top: 46px;
 }
@@ -1144,23 +1148,17 @@ button.anchor {
 }
 
 .dc__element-scroller {
-    width: 40px;
-    height: 80px;
-    border-radius: 50px;
     opacity: 0.8;
-    box-shadow:
-        0 0 4px 0 rgba(0, 10, 20, 0.5),
-        0 0 4px 0 rgba(0, 10, 20, 0.5);
+    background: #2C3354;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
     border: unset;
     overflow: hidden;
 
     button {
         background: #2c3354;
-        height: 50%;
         outline: unset;
         border: unset;
-        padding: unset;
-
+        padding: 4px;
         &:first-child {
             border-bottom: 1px solid var(--N900);
         }
@@ -1179,11 +1177,6 @@ button.anchor {
             svg path {
                 stroke: var(--N400);
             }
-        }
-
-        svg {
-            height: 32px;
-            width: 32px;
         }
     }
 
