line height added

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3708,6 +3708,9 @@ textarea,
     line-height: 18px;
 }
 
+.lh-18-imp {
+    line-height: 18px !important;
+}
 .lh-20 {
     line-height: 20px;
 }
