refactor: cm-secret - handled various bugs/flows & refactored code

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2132,6 +2132,10 @@ button.anchor {
     align-self: flex-start;
 }
 
+.dc__align-self-end {
+    align-self: end;
+}
+
 .dc__align-center {
     text-align: center !important;
 }
