--- a/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
+++ b/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
@@ -39,8 +39,9 @@
 
 .cm-secret-container {
     & .main-content {
-        height: calc(100vh - 142px);
+        height: 100%;
         overflow-y: auto;
+        overflow-x: hidden;
     }
 
     &.with-comment-drawer {
@@ -58,6 +59,12 @@
 
         & .crud-btn {
             max-width: calc(100% - 300px);
+        }
+    }
+
+    &.with-crud-btn {
+        & .main-content {
+            height: calc(100vh - 142px);
         }
     }
 
