feat: add util for max width 80%

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2472,6 +2472,10 @@ button.anchor {
     max-width: 155px;
 }
 
+.dc__mxw-80-per {
+    max-width: 80%;
+}
+
 .fw-n {
     font-weight: normal !important;
 }
