--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2157,6 +2157,10 @@ button.anchor {
 // Border
 .dc__border {
     border: 1px solid var(--N200);
+
+    &--n9 {
+        border: 1px solid var(--N900);
+    }
 }
 
 .dc__border-dashed {
