feat: add option to clear tls input for tls connection in gitprovider and gitops config

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -352,6 +352,10 @@ a:focus {
     top: 0;
 }
 
+.dc__top-8 {
+    top: 8px;
+}
+
 .dc__top-9 {
     top: 9px;
 }
@@ -406,6 +410,10 @@ a:focus {
 
 .dc__right-0 {
     right: 0;
+}
+
+.dc__right-10 {
+    right: 10px;
 }
 
 .dc__left-0 {
