--- a/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
+++ b/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-.form-row__select-external-type {
+ .form-row__select-external-type {
     justify-content: flex-start;
 
     .edit {
@@ -37,23 +37,34 @@
     grid-template-rows: auto;
 }
 
-.cm-secret-main-container {
+.cm-secret-container {
+    & .main-content {
+        height: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
     &.with-comment-drawer {
         display: grid;
-        grid-template-columns: 1fr 0;
+        grid-template-columns: 1fr 300px;
         position: absolute;
         left: 56px;
-        width: calc(100% - 56px);
-        height: calc(100% - 78px);
+        top: 77px;
+        right: 0;
+        height: calc(100% - 77px);
         animation: comments-view-opening;
         animation-duration: 200ms;
         animation-timing-function: linear;
         animation-fill-mode: forwards;
-        .main-content {
-            height: calc(100vh - 76px);
-            overflow: scroll;
-            padding: 20px;
-            background-color: var(--window-bg);
+
+        & .crud-btn {
+            max-width: calc(100% - 300px);
+        }
+    }
+
+    &.with-crud-btn {
+        & .main-content {
+            height: calc(100vh - 142px);
         }
     }
 
@@ -63,7 +74,7 @@
         }
 
         100% {
-            grid-template-columns: 1fr 286px;
+            grid-template-columns: 1fr 300px;
         }
     }
 
@@ -85,4 +96,28 @@
     position: absolute;
     bottom: 100px;
     right: 160px;
+}
+
+.validation-error-block {
+    padding: 8px 16px;
+    background: var(--R100);
+    display: grid;
+    grid-template-columns: 16px 1fr;
+    grid-column-gap: 8px;
+    align-content: initial;
+    color: #f32e2e;
+    font-size: 12px;
+
+    svg {
+        height: 16px;
+        width: 16px;
+    }
+
+    white-space: pre;
+}
+
+.cm-secret-name-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 12px;
 }
