--- a/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
+++ b/src/Pages/Shared/ConfigMapSecret/ConfigMapSecret.scss
@@ -38,11 +38,6 @@
 }
 
 .cm-secret-container {
-    & .main-content {
-        height: 100%;
-        overflow-y: auto;
-        overflow-x: hidden;
-    }
 
     &.with-comment-drawer {
         display: grid;
@@ -63,7 +58,7 @@
     }
 
     &.with-crud-btn {
-        & .main-content {
+        > .main-content {
             height: calc(100vh - 142px);
         }
     }
@@ -114,10 +109,4 @@
     }
 
     white-space: pre;
-}
-
-.cm-secret-name-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-gap: 12px;
 }
