--- a/src/components/app/list/list.scss
+++ b/src/components/app/list/list.scss
@@ -483,9 +483,9 @@
 .jobs-view-container .app-list .app-list__header,
 .jobs-view-container .app-list .app-list__row {
     display: grid;
-    grid-template-columns: 25px 300px 200px repeat(3, 248px) auto 0px;
+    grid-template-columns: 25px 300px 200px repeat(2, 248px) auto 48px;
     align-items: center;
-    column-gap: 16px;
+    gap: 16px;
 }
 
 .jobs-view-container .app-list .app-list__header .app-list__cell,
