--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4396,6 +4396,7 @@ textarea::placeholder {
     background: linear-gradient(90deg, #edf1f5 30%, #ffffff 60%, #edf1f5 100%);
     background-size: 800px 104px;
     position: relative;
+    border-radius: 2px;
 }
 
 @keyframes shimmer-loading {
@@ -4552,6 +4553,14 @@ textarea::placeholder {
 
 .dc__hover-border-b5:hover {
     border: 1px solid var(--B500) !important;
+}
+
+.dc__hover-border-n1:hover {
+    border: 1px solid var(--N100);
+
+    &--imp {
+        border: 1px solid var(--N100) !important;
+    }
 }
 
 .placeholder-cn5::placeholder {
