--- a/src/components/CIPipelineN/CreatePluginModal/CreatePluginModal.scss
+++ b/src/components/CIPipelineN/CreatePluginModal/CreatePluginModal.scss
@@ -1,5 +1,7 @@
-.create-plugin-form {
-    &__input-variable-container {
-        box-shadow: 0px 1px 2px 0px rgba(1, 87, 173, 0.10);
+.create-plugin-modal {
+    .create-plugin-form {
+        &__input-variable-container {
+            box-shadow: 0px 1px 2px 0px rgba(1, 87, 173, 0.10);
+        }
     }
 }
