--- a/src/components/ciPipeline/ciPipeline.scss
+++ b/src/components/ciPipeline/ciPipeline.scss
@@ -245,7 +245,7 @@
 .pipeline-container {
     display: grid;
     grid-template-columns: 280px 1fr;
-    height: calc(100vh - 150px);
+    height: calc(100vh - 138px);
     background: var(--white);
     overflow: hidden;
 
@@ -253,7 +253,7 @@
         border-right: 1px solid var(--N200);
         padding-left: 20px;
         padding-right: 20px;
-        max-height: calc(100vh - 150px);
+        max-height: calc(100vh - 138px);
         overflow: auto;
     }
 
@@ -283,11 +283,11 @@
 
 .task-item {
     height: 34px;
-    background: var(--window-bg);
+    background: var(--N100);
     border-radius: 4px;
     padding: 6px 4px;
     display: flex;
-    border: 1px solid var(--window-bg);
+    border: 1px solid var(--N100);
 
     &:hover {
         border: 1px solid var(--N200);
@@ -297,12 +297,6 @@
 .task-item__selected-list {
     background: var(--B100) !important;
     border: 1px solid var(--B500) !important;
-}
-
-.drag-icon {
-    cursor: move;
-    height: 20px;
-    width: 20px;
 }
 
 .add-task-container {
