refactor: EnvConfigurationsNav - logic to add new unnamed item. chore: EnvConfigurations - add tooltip to '+' icon button. feat: CollapsibleList - redesign list header to include active state, add tooltip support for header icon button, disable double click on nav-link if it is in active state fix: ConfigMapSecret - UI/UX and legacy issues chore: ConfigMapSecret - add error toast before switching to GUI if yaml has errors, add empty state image and text

--- a/src/Pages/Shared/CollapsibleList/CollapsibleList.scss
+++ b/src/Pages/Shared/CollapsibleList/CollapsibleList.scss
@@ -17,7 +17,7 @@
             background: var(--N50);
         }
 
-        &:not(.active) &__title {
+        &:not(.active):not(.no-hover) &__title {
             color: var(--N900);
         }
     }
