chore: refactor dc__striped-row into dc__striped-table

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1293,8 +1293,8 @@ button.anchor {
     background-color: $background;
 }
 
-.dc__striped-row {
-    &:nth-child(odd) {
+.dc__striped-table {
+    div:nth-child(odd) {
         @include dc__striped-row(var(--window-bg));
 
         .app-status__icon {
@@ -1302,15 +1302,24 @@ button.anchor {
         }
     }
 
-    &:nth-child(even) {
-        @include dc__striped-row(white);
+    div:nth-child(even) {
+        @include dc__striped-row(var(--N0));
 
         .app-status__icon {
-            @include dc__app-status-icon(white);
+            @include dc__app-status-icon(var(--N0));
         }
     }
 
-    &:hover {
+    // NOTE: for the header (1st row)
+    div:first-child {
+        @include dc__striped-row(var(--N0));
+
+        .app-status__icon {
+            @include dc__app-status-icon(var(--N0));
+        }
+    }
+
+    div:hover {
         @include dc__striped-row(var(--B100));
 
         .app-status__icon {
