fix: use N50 for striped table odd rows

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1295,36 +1295,20 @@ button.anchor {
 
 .dc__striped-table {
     div:nth-child(odd) {
-        @include dc__striped-row(var(--window-bg));
-
-        .app-status__icon {
-            @include dc__app-status-icon(var(--window-bg));
-        }
+        @include dc__striped-row(var(--N50));
     }
 
     div:nth-child(even) {
         @include dc__striped-row(var(--N0));
-
-        .app-status__icon {
-            @include dc__app-status-icon(var(--N0));
-        }
     }
 
     // NOTE: for the header (1st row)
     div:first-child {
         @include dc__striped-row(var(--N0));
-
-        .app-status__icon {
-            @include dc__app-status-icon(var(--N0));
-        }
     }
 
     div:hover {
-        @include dc__striped-row(var(--B100));
-
-        .app-status__icon {
-            @include dc__app-status-icon(var(--B100));
-        }
+        @include dc__striped-row(var(--B50));
     }
 }
 
