fix: Fix issue with CI details page not rendering logs properly

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -368,6 +368,10 @@ a:focus {
     top: 26px;
 }
 
+.dc__top-30 {
+    top: 30px;
+}
+
 .dc__top-40 {
     top: 40px;
 }
@@ -386,6 +390,10 @@ a:focus {
 
 .dc__top-49 {
     top: 49px;
+}
+
+.dc__top-74 {
+    top: 74px;
 }
 
 .dc__top-77 {
