fix: ui/ux issues and null checks in ConfigMapSecret

--- a/src/Pages/Applications/DevtronApps/Details/AppConfigurations/appConfig.scss
+++ b/src/Pages/Applications/DevtronApps/Details/AppConfigurations/appConfig.scss
@@ -40,7 +40,7 @@
 
         &.app-compose-env-configurations__nav {
             padding: 0;
-            grid-template-rows: 45px 46px 1fr;
+            display: block
         }
 
         &.app-compose-with-no-gitops-config__nav {
