--- a/src/css/triggerView.scss
+++ b/src/css/triggerView.scss
@@ -133,6 +133,17 @@
     border: solid 1px var(--N200);
     background-color: var(--white);
     border-radius: 4px;
+
+    .git-commit-info-generic__copy{
+        visibility: hidden;
+    }
+
+    &:hover {
+        box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.10);
+        .git-commit-info-generic__copy{
+            visibility: visible;
+        }
+    }
 }
 
 .material-history--cd {
