feat: Application Group - add deployment config comparison view, code refactor, ConfigMapSecret - bugfix - prompt not showing in some cases

--- a/src/components/ApplicationGroup/List/EnvironmentsList.scss
+++ b/src/components/ApplicationGroup/List/EnvironmentsList.scss
@@ -51,7 +51,7 @@
         grid-template-rows: auto 1fr;
 
         &.env-configurations {
-            grid-template-rows: 45px 1fr;
+            display: block;
         }
     }
 
