feat: add default redirection for network status interface

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4071,6 +4071,10 @@ textarea,
 
 .dc__flip-90 {
     transform: rotate(90deg);
+
+    &--neg {
+        transform: rotate(-90deg);
+    }
 }
 
 .dc__flip-270 {
