feat: add dc__fill-transparent

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2798,6 +2798,12 @@ textarea,
     }
 }
 
+.dc__fill-transparent {
+    path {
+        fill: transparent !important;
+    }
+}
+
 .icon-color-grey {
     fill: #5a5a5a;
 }
