--- a/src/css/colorPalette.scss
+++ b/src/css/colorPalette.scss
@@ -80,4 +80,5 @@
     --tippy-card-black-bg: #2d3452;
     --terminal-bg: #0b0f22;
     --inprogress-orange: #ff7e5b;
+    --search-highlight-text: #ffb54966;
 }
