--- a/src/components/ClusterNodes/clusterNodes.scss
+++ b/src/components/ClusterNodes/clusterNodes.scss
@@ -181,28 +181,28 @@
             }
             .pods-grid {
                 display: grid;
-                grid-template-columns: 1fr;
                 grid-template-rows: auto 1fr;
-                grid-template-areas:
-                    'header'
-                    'main';
-                header {
-                    grid-area: header;
+                main, header, .row-wrapper {
                     display: grid;
-                    grid-template-columns: minmax(150px, 200px) minmax(100px, auto) repeat(4, 100px) 75px;
+                }
+                main {
+                    grid-template-rows: auto;
+                    & > .row-wrapper:not(:last-child) {
+                        border-bottom: 1px solid var(--N100);
+                    }
+                }
+                header {
                     position: sticky;
                     top: 46px;
                     z-index: 1;
                 }
-                main {
-                    grid-area: main;
-                    display: grid;
-                    grid-template-columns: minmax(150px, 200px) minmax(100px, auto) repeat(4, 100px) 75px;
+                .row-wrapper, header {
+                    padding: 8px 20px;
+                    line-height: 24px;
+                    grid-template-columns: minmax(100px, 150px) minmax(100px, 1fr) repeat(4, 100px) 75px;
+                    gap: 8px;
                 }
-                .row-wrapper {
-                    display: contents;
-                }
-                .row-wrapper:hover > div {
+                .row-wrapper:hover {
                     background-color: var(--N50);
                 }
             }
@@ -240,28 +240,6 @@
     .list-title {
         .mw-85px {
             max-width: 85px;
-        }
-        .sort-column {
-            background-image: url('../../assets/icons/misc/sort.svg');
-            display: inline-block;
-            height: 20px;
-            width: 16px;
-            background-size: 100% 100%;
-            -o-background-size: 100% 100%;
-            -webkit-background-size: 100% 100%;
-        }
-        &.sort-by {
-            .sort-icon {
-                background-image: url('../../assets/icons/ic-sort-arrow-down.svg');
-                display: inline-block;
-                height: 12px;
-                width: 12px;
-                position: relative;
-                top: -4px;
-            }
-            .desc {
-                transform: rotate(180deg);
-            }
         }
     }
 }
