--- a/src/components/common/DynamicTabs/DynamicTabs.scss
+++ b/src/components/common/DynamicTabs/DynamicTabs.scss
@@ -129,6 +129,7 @@
         border-bottom: 2px solid var(--N0);
         border-left: 1px solid var(--N200);
         border-right: 1px solid var(--N200);
+        background-color: var(--N0);
 
         +.dynamic-tab__border {
             display: none;
