--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -637,6 +637,15 @@ a:focus {
     word-break: break-word;
 }
 
+.dc__ellipsis-right__3rd-line {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    word-break: break-word;
+}
+
 .dc__ellipsis-left {
     overflow: hidden;
     text-overflow: ellipsis;
