--- a/src/css/triggerView.scss
+++ b/src/css/triggerView.scss
@@ -135,7 +135,9 @@
     border-radius: 4px;
 
     &:hover {
-        box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.10);
+        .material-history__box-shadow {
+            box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.10);
+        }
         .git-commit-info-generic__copy{
             visibility: visible;
         }
