--- a/src/css/triggerView.scss
+++ b/src/css/triggerView.scss
@@ -134,9 +134,10 @@
     background-color: var(--white);
     border-radius: 4px;
 
-    &:hover {
-            box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.10);
-    }
+}
+
+.material-history__box-shadow:hover {
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.10);
 }
 
 .material-history--cd {
@@ -144,8 +145,10 @@
     background-color: transparent;
     padding: 0px;
     margin: 0 0 12px;
+
     &:hover {
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+
         .approval-text {
             color: #0066cc;
         }
@@ -316,6 +319,7 @@
     color: var(--N900);
     border-bottom: solid 1px #d6dbdf;
     margin: 0px;
+
     .modal__title {
         font-size: 16px;
         font-weight: 400;
@@ -395,7 +399,7 @@
         opacity: 0;
 
         &:checked {
-            & + .check {
+            &+.check {
                 display: inline-block;
             }
         }
@@ -501,10 +505,12 @@
     right: 0;
     background: var(--N000);
     top: 0;
+
     &.contains-diff-view {
         width: 100%;
         min-width: 800px;
         max-width: 1024px;
+
         .material-history:last-child {
             margin-bottom: 8px;
         }
@@ -595,6 +601,7 @@
         border-left: none;
         border-right: none;
         border-radius: 0;
+
         &.tab-bottom-radius {
             border-radius: 0 0 4px 4px;
             border-bottom: 0;
@@ -621,18 +628,22 @@
     display: flex;
     column-gap: 16px;
     border-bottom: 1px solid var(--N200);
+
     .items-width-1 {
         flex: 1;
     }
+
     &.table-content {
         border-bottom: 1px solid var(--N100);
     }
 }
+
 .url-box {
     max-width: 240px;
     cursor: pointer;
     color: var(--B500);
 }
+
 .trigger-modal__trigger {
     display: flex;
     justify-content: space-between;
@@ -650,9 +661,11 @@
         position: static;
         box-shadow: none;
     }
+
     .deploy-config-select__group {
         padding-top: 4px;
         padding-bottom: 4px;
+
         .deploy-config-select__group-heading {
             font-size: 12px;
             font-weight: 600;
@@ -666,10 +679,12 @@
         }
     }
 }
+
 .trigger-modal__config-diff-status {
     &:not(.config-not-found):hover {
         background-color: var(--N100);
     }
+
     svg {
         &.config-diff-found-icon {
             path {
@@ -678,6 +693,7 @@
                 }
             }
         }
+
         &.no-config-found-icon {
             path {
                 &:nth-of-type(2) {
@@ -687,13 +703,16 @@
         }
     }
 }
+
 .trigger-modal__config-diff-status svg.loader__svg path,
 .trigger-modal__config-diff-status svg.config-diff-found-icon path:nth-of-type(2) {
     fill: white;
 }
+
 .code-editor-green-diff {
     background: var(--code-editor-green);
 }
+
 .code-editor-red-diff {
     background: var(--code-editor-red);
 }
