--- a/src/components/charts/list/list.scss
+++ b/src/components/charts/list/list.scss
@@ -136,7 +136,7 @@
 
 .chart-grid-item:hover {
     text-decoration: none;
-    box-shadow: 0 8px 12px 0 rgba(30, 35, 96, 0.1), 0 1px 4px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 12px 0 rgba(30, 35, 96, 0.1);
 }
 
 .select-chart-view__multi-chart-summary--chart-group {
