--- a/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
@@ -205,34 +205,38 @@
         fill: var(--B500);
     }
 }
+.cluster-list-main-container {
+    .code-editor-container {
+        height: 100%;
+        background: var(--N50);
+        border: 0;
+        border-radius: none;
 
-.code-editor-container {
-    height: 100%;
-    background: var(--N50);
-    border: 0;
-    border-radius: none;
-
-    .code-editor__header {
-        background-color: var(--N000);
-    }
-
-    .react-monaco-editor-container,
-    .overflow-guard {
-        height: calc(100vh - 178px) !important;
-    }
-    .monaco-editor {
-        .monaco-editor-background,
-        .margin {
-            background-color: var(--N50) !important;
+        .code-editor__header {
+            background-color: var(--N000);
         }
-        height: calc(100vh - 178px) !important;
-    }
-    .radio-group {
-        border: 1px solid var(--N200);
-        border-radius: 4px;
+
+        .react-monaco-editor-container,
+        .overflow-guard {
+            height: calc(100vh - 178px) !important;
+        }
+
+        .monaco-editor {
+
+            .monaco-editor-background,
+            .margin {
+                background-color: var(--N50) !important;
+            }
+
+            height: calc(100vh - 178px) !important;
+        }
+
+        .radio-group {
+            border: 1px solid var(--N200);
+            border-radius: 4px;
+        }
     }
 }
-
 .pod-terminal-hidden {
     visibility: hidden;
     height: 0;
