--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2070,16 +2070,6 @@ button.anchor {
         color: var(--N900);
     }
 }
-
-.dc__hosturl-error {
-    border-radius: 4px;
-    border: solid 1px var(--R200);
-    color: var(--N900);
-    padding: 10px 16px;
-    background-color: var(--R100);
-    font-size: 13px;
-}
-
 .dc__artifact-add {
     font-weight: 600;
     font-style: normal;
@@ -2590,6 +2580,11 @@ button.anchor {
 }
 
 // Radius
+
+.dc__top-right-radius-3 {
+    border-top-right-radius: 3px;
+}
+
 .dc__bottom-radius-4 {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
