--- a/src/components/security/security.scss
+++ b/src/components/security/security.scss
@@ -478,3 +478,13 @@
         align-items: flex-start;
     }
 }
+
+.search-type__select-picker__control {
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+}
+
+.search-bar {
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+}
