--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -372,8 +372,8 @@ a:focus {
     top: 26px;
 }
 
-.dc__top-30 {
-    top: 30px;
+.dc__top-38 {
+    top: 38px;
 }
 
 .dc__top-40 {
@@ -396,12 +396,12 @@ a:focus {
     top: 49px;
 }
 
-.dc__top-74 {
-    top: 74px;
-}
-
 .dc__top-77 {
     top: 77px;
+}
+
+.dc__top-82 {
+    top: 82px;
 }
 
 .dc__top-88 {
@@ -3825,6 +3825,10 @@ textarea,
 
 .pt-40 {
     padding-top: 40px;
+}
+
+.pl-50 {
+    padding-left: 50px;
 }
 
 .pt-70 {
