--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1183,6 +1183,7 @@ button.anchor {
         outline: unset;
         border: unset;
         padding: 4px;
+
         &:first-child {
             border-bottom: 1px solid var(--N900);
         }
@@ -2268,6 +2269,10 @@ button.anchor {
     &--b1 {
         border-left: solid 1px var(--B100);
     }
+
+    &--n7 {
+        border-left: solid 1px var(--N700);
+    }
 }
 
 .dc__border-left-n0 {
@@ -3164,6 +3169,7 @@ textarea,
 .w-126 {
     width: 126px;
 }
+
 .w-130 {
     width: 130px;
 }
@@ -3767,6 +3773,7 @@ textarea,
 .lh-18-imp {
     line-height: 18px !important;
 }
+
 .lh-20 {
     line-height: 20px;
 }
@@ -4834,7 +4841,7 @@ textarea::placeholder {
 }
 
 .dc__fill-available-space {
-    > * {
+    >* {
         width: 100%;
         height: 100%;
     }
@@ -4848,4 +4855,26 @@ textarea::placeholder {
 .dc__grid-half {
     display: grid;
     grid-template-columns: 50% 50%;
+}
+
+@keyframes pulsate-animation {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(255, 131, 0, 0.4);
+        box-shadow: 0 0 0 0 rgba(255, 131, 0, 0.4);
+    }
+
+    70% {
+        -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+        box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+    }
+
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    }
+}
+
+.dc__pulsate {
+    box-shadow: 0 0 0 rgba(255, 126, 91, 0.4);
+    animation: pulsate-animation 2s infinite;
 }
