fix: add word-break for line clamp 6

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4211,6 +4211,7 @@ textarea::placeholder {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
+    word-break: break-all;
 }
 
 // opacity
