--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4837,3 +4837,9 @@ textarea::placeholder {
     display: grid;
     grid-template-columns: 50% 50%;
 }
+
+.cd-material {
+    &__container-with-sidebar {
+        grid-template-columns: 234px auto;
+    }
+}
