feat: editable gui schema on deployment charts

--- a/src/Pages/GlobalConfigurations/DeploymentCharts/List/styles.scss
+++ b/src/Pages/GlobalConfigurations/DeploymentCharts/List/styles.scss
@@ -22,12 +22,9 @@
     .chart-list-row {
         display: grid;
         gap: 16px;
-        grid-template-columns: 250px 150px auto 16px;
+        grid-template-columns: 250px 150px auto 16px 16px;
         .devtron-tag {
             white-space: nowrap;
-        }
-        .chart-version-row:hover {
-            background-color: var(--N50);
         }
     }
 
