--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4784,6 +4784,13 @@ textarea::placeholder {
     font: inherit;
     cursor: pointer;
     outline: inherit;
+
+    &:focus,
+    &:active,
+    &:hover {
+        outline: unset;
+        border: unset;
+    }
 }
 
 /* NOTE: if the border width is smaller than border-radius curve;
