--- a/src/Pages/GlobalConfigurations/DeploymentCharts/List/styles.scss
+++ b/src/Pages/GlobalConfigurations/DeploymentCharts/List/styles.scss
@@ -19,7 +19,8 @@
     .chart-list-row {
         display: grid;
         gap: 16px;
-        grid-template-columns: 250px 150px auto 16px 16px;
+        grid-template-columns: 250px 150px 1fr auto;
+        align-items: center;
         .devtron-tag {
             white-space: nowrap;
         }
