feat: align security polick bock select picker to right

--- a/src/components/security/security.scss
+++ b/src/components/security/security.scss
@@ -461,7 +461,8 @@
         border-top-right-radius: 0 !important;
         border-bottom-right-radius: 0 !important;
     }
-    .security-scans-search {
+
+    .security-scan-search {
         .search-bar {
             border-top-left-radius: 0 !important;
             border-bottom-left-radius: 0 !important;
