--- a/src/css/forms.scss
+++ b/src/css/forms.scss
@@ -369,7 +369,7 @@ p.sentence-case:first-letter {
     margin-right: 10px;
 }
 
-.form__radio-group input {
+.form__radio-group input[type="radio"] {
     position: absolute;
     opacity: 0;
 }
